--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-tslint",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Useful TSLint rules extracted from `angular/components` for Angular libraries.",
   "repository": "git+https://github.com/rx-ts/ng-tslint.git",
   "homepage": "https://github.com/angular/components/tree/master/tools/tslint-rules",
@@ -19,19 +19,21 @@
   "scripts": {
     "build": "tsc -b tsconfig.rules.json",
     "docs": "ts-node scripts/extract-docs",
+    "postinstall": "yarn-deduplicate || exit 0",
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.3"
   },
   "devDependencies": {
     "@1stg/prettier-config": "^0.10.5",
     "@1stg/tsconfig": "^0.10.3",
     "@types/minimatch": "^3.0.3",
-    "@types/node": "^14.0.23",
-    "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.7"
+    "@types/node": "^14.14.7",
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.5",
+    "yarn-deduplicate": "^3.1.0"
   },
   "renovate": {
     "extends": [
