--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.1.0",
   "description": "Useful TSLint rules extracted from `angular/components` for Angular libraries.",
   "repository": "git+https://github.com/rx-ts/ng-tslint.git",
-  "homepage": "https://github.com/angular/components/tree/master/tools/tslint-rules",
   "funding": {
     "type": "opencollective",
     "url": "https://opencollective.com/rxts"
@@ -12,29 +11,33 @@
   "license": "MIT",
   "main": "tslint.json",
   "files": [
-    "tslint.json",
+    "!rules/*.tsbuildinfo",
     "rules",
-    "!rules/*.tsbuildinfo"
+    "tslint.json"
   ],
   "scripts": {
     "build": "tsc -b tsconfig.rules.json",
     "docs": "ts-node scripts/extract-docs",
-    "postinstall": "yarn-deduplicate || exit 0",
-    "prepublishOnly": "yarn build"
+    "prepare": "yarn-deduplicate || exit 0",
+    "release": "npm run build && clean-publish"
+  },
+  "peerDependencies": {
+    "tslint": "^6.0.0",
+    "typescript": "^4.0.0"
   },
   "dependencies": {
-    "tslib": "^2.0.3"
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@1stg/prettier-config": "^0.10.5",
-    "@1stg/tsconfig": "^0.10.3",
-    "@types/minimatch": "^3.0.3",
-    "@types/node": "^14.14.7",
-    "ts-node": "^9.0.0",
+    "@1stg/prettier-config": "^1.7.3",
+    "@1stg/tsconfig": "^1.3.1",
+    "@types/minimatch": "^3.0.4",
+    "@types/node": "^15.0.3",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.5",
-    "yarn-deduplicate": "^3.1.0"
+    "typescript": "^4.2.4"
   },
+  "prettier": "@1stg/prettier-config",
   "renovate": {
     "extends": [
       "@1stg"
