--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "MIT",
   "main": "tslint.json",
   "files": [
-    "!rules/*.tsbuildinfo",
     "rules",
-    "tslint.json"
+    "tslint.json",
+    "!rules/*.tsbuildinfo"
   ],
   "scripts": {
     "build": "tsc -b tsconfig.rules.json",
@@ -44,6 +44,9 @@
     "tslint": "^6.1.3",
     "typescript": "^4.3.5",
     "yarn-deduplicate": "^3.1.0"
+  },
+  "resolutions": {
+    "prettier": "^2.3.2"
   },
   "prettier": "@1stg/prettier-config",
   "renovate": {
